<resources>
    <string name="app_name">TicTocToe</string>
    <string name="player1">Player X</string>

    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="button4">Button 4</string>
    <string name="button5">Button 5</string>
    <string name="button6">Button 6</string>
    <string name="button7">Button 7</string>
    <string name="button8">Button 8</string>
    <string name="button9">Button 9</string>


    <string name="player2">Player O</string>
</resources>